syntax = "proto3";

package todo;

option go_package = "todo-app/pkg/grpc;grpc";

service TodoService {
    rpc CreateTodo (CreateTodoRequest) returns (TodoResponse);
    rpc GetTodo (GetTodoRequest) returns (TodoResponse);
    rpc ListTodos (ListTodosRequest) returns (ListTodosResponse);
    rpc UpdateTodo (UpdateTodoRequest) returns (TodoResponse);
    rpc DeleteTodo (DeleteTodoRequest) returns (EmptyResponse);
}

message Todo {
    int64 id = 1;
    string title = 2;
    string description = 3;
    bool completed = 4;
}

message CreateTodoRequest {
    string title = 1;
    string description = 2;
}

message GetTodoRequest {
    int64 id = 1;
}

message ListTodosRequest {}

message ListTodosResponse {
    repeated Todo todos = 1;
}

message UpdateTodoRequest {
    int64 id = 1;
    string title = 2;
    string description = 3;
    bool completed = 4;
}

message DeleteTodoRequest {
    int64 id = 1;
}

message TodoResponse {
    Todo todo = 1;
}

message EmptyResponse {}
